--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.7.7'
+	id 'org.springframework.boot' version '3.0.1'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id "org.flywaydb.flyway" version "9.11.0"
 }
@@ -19,21 +19,22 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
-	implementation 'org.springframework.security:spring-security-oauth2-jose'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.boot:spring-boot-starter-security:3.0.1'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:3.0.1'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux:3.0.1'
+	implementation 'io.awspring.cloud:spring-cloud-starter-aws-messaging:2.4.2'
 	implementation 'org.flywaydb:flyway-core'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	runtimeOnly 'org.postgresql:postgresql'
-	testImplementation 'org.springframework.security:spring-security-test'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation "com.github.tomakehurst:wiremock-jre8:2.35.0"
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'org.testcontainers:postgresql'
-	testImplementation "org.testcontainers:localstack:1.17.6"
+	testImplementation "org.testcontainers:lstackloca:1.17.6"
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.1'
+	testImplementation 'org.springframework.security:spring-security-test:6.0.1'
 }
 
 flyway {
