implemented Review Repository tests

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    driver-class-name: org.postgresql.Driver
     password: test
     username: test
     url: jdbc:postgresql://localhost:5432/book_review
+    driver-class-name: org.postgresql.Driver
   security:
     oauth2:
       resourceserver:
@@ -12,13 +12,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
-    show-sql: true
   mvc:
     throw-exception-if-no-handler-found: true
   devtools:
     livereload:
       enabled: true
-
 cloud:
   aws:
     stack:
@@ -32,9 +30,9 @@ server:
     include-stacktrace: on_param
     include-message: always
     include-binding-errors: always
-
 clients:
-  open-library: https://openlibrary.org
+  open-library:
+    base-url: https://openlibrary.org
 
 sqs:
   book-synchronization-queue: default
