--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,9 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation "com.github.tomakehurst:wiremock-jre8:2.35.0"
 	testImplementation 'org.testcontainers:junit-jupiter'
-	testImplementation 'org.testcontainers:postgresql'
-	testImplementation "org.testcontainers:lstackloca:1.17.6"
+	testImplementation 'p6spy:p6spy:3.9.1'
+	testImplementation 'org.testcontainers:postgresql:1.17.6'
+	testImplementation 'org.testcontainers:localstack:1.17.6'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.1'
 	testImplementation 'org.springframework.security:spring-security-test:6.0.1'
 }
