implemented test to verify vehavior that unauthorized users should no tbe able to look at book reviews statistics

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'org.flywaydb:flyway-core'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	compileOnly 'org.projectlombok:lombok:1.18.24'
+	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation "com.github.tomakehurst:wiremock-jre8:2.35.0"
 	testImplementation 'org.testcontainers:junit-jupiter'
